# pliny-the-elder

./: .env.example  .gitignore  AGENTS.md  FRONTIER_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  binternet.md  mcp.json  plan.md  pyproject.toml  pytest.ini  run_frontier_eval.sh  run_multi_provider_eval.sh  sitecustomize.py  test_vei_setup.py
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json
docs/: FRONTIER_EVAL.md  contracts.md  roadmap.md  simulation_rl_plan.md
examples/: llm_smoke_run.py  llm_stdio_min.py  local_router_min.py  mcp_client_min.py  mcp_client_stdio_min.py  rl_env.py  rl_train.py  scripted_procurement.py
tests/: README.md  conftest.py  test_behavior_memory.py  test_behavior_policy.py  test_data_models.py  test_drift_engine.py  test_dynamic_scenarios.py  test_llm_limits.py  test_llm_stdio_smoke.py  test_llm_tasks.py  test_monitors.py  test_rl_penalty.py  test_rl_train.py  test_rl_wrappers.py  test_rollout_cli.py  test_router_controls.py  test_router_faults_latency.py  test_router_identity.py  test_router_inject.py  test_router_new_twins.py  test_router_servicedesk.py  test_router_state_store.py  test_scenario_unit.py  test_scenarios_catalog.py  test_scene_compiler.py  test_score_policy.py  test_slack_thread_ordering.py  test_sse_e2e_optional.py  test_sse_smoke.py  test_state_persistence.py  test_state_policy.py  test_state_store.py  test_tool_registry.py  test_trace_fields.py  test_vei_eval_cli.py  test_vei_scenarios_cli.py  test_vei_score_regex.py  test_vei_score_subgoals.py  (+4 more)
vei/: config.py  (+2 more)
(+78 files in other folders)
